# xRtoCapeOpen

./: .gitignore  CMakeLists.txt  RtoCapeOpen.vcxproj  SqpSolver.idl  SqpSolverC.cpp  SqpSolverC.h  SqpSolverC.inl  SqpSolverS.cpp  SqpSolverS.h  SqpcSovlerImpl.cpp  dllmain.cpp
cmake/Modules/: FindACE.cmake  FindTAO.cmake
core/: CMakeLists.txt  CapeBackendFactory.cpp  CapeBackendFactory.h  CapeMINLPModel.h  CapeMINLPModelMock.cpp  CapeMINLPModelMock.h  CapeMINLPProblemCore.cpp  CapeMINLPProblemCore.h  xOptModelCapeOpen.cpp
core/backend/com/: CapeMINLPModelCom.cpp  CapeMINLPModelCom.h  CapeOpenComInterfaces.h  CapeRegisterComBackend.cpp  CapeVariantMarshal.cpp  CapeVariantMarshal.h  RefCapeMINLP.cpp  RefCapeMINLP.h
core/backend/corba/: CapeCorbaMarshal.h  CapeMINLPModelCorba.cpp  CapeMINLPModelCorba.h  CapeRegisterCorbaBackend.cpp  RefCapeMINLPServant.cpp  RefCapeMINLPServant.h
docs/: capeopen_problem_design.md  xOptMINLPco_design.md
tests/: MockXOptProblem.h  mock_xoptproblem_dll.cpp  test_capeopen_com.cpp  test_capeopen_corba.cpp  test_capeopen_model.cpp  test_capeopen_problem.cpp  test_xoptminlpco_adapter.cpp  test_xoptminlpco_capi.cpp  test_xoptminlpco_com.cpp  test_xoptminlpco_corba.cpp  test_xoptminlpco_register.cpp
xOptMINLPco/: CMakeLists.txt  CoMINLP.cpp  CoMINLP.h  MINLPServant.cpp  MINLPServant.h  XOptMINLPAdapter.cpp  XOptMINLPAdapter.h  xOptMINLPco.def  xOptMINLPco.vcxproj  xOptMINLPco.vcxproj.filters  xOptMINLPcoClsid.h  xOptMINLPcoServer.cpp
